Coverity analysis defect 150121: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability Sep1-15, ClusterScalability Sep15-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/resharding/resharding_coordinator_observer.cpp:230: MISSING_LOCK 150121 Accessing "this->_allRecipientsDone" without holding lock "mongo::ReshardingCoordinatorObserver._mutex". Elsewhere, "mongo::ReshardingCoordinatorObserver._allRecipientsDone" is written to with "ReshardingCoordinatorObserver._mutex" held 3 out of 3 times.

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: