SERVER-109537 Lock access to member variables to fix any potential race (#41175)

GitOrigin-RevId: 2f2d9eee5cf8b2178f5232de56a4f4667493b331